@@ -488,6 +488,7 @@ All (GUI):
 
 GTK:
 
+- Implement support for wxBG_STYLE_TRANSPARENT (Armel Asselin).
 - Fix wxNotebook best size calculation.
 
 MSW:
